--- a/papertrade-frontend-admin/package.json
+++ b/papertrade-frontend-admin/package.json
@@ -9,21 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.11.0",
-    "axios": "^1.13.2",
-    "next": "16.0.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-redux": "^9.2.0"
+    "@reduxjs/toolkit": "^2.1.0",
+    "axios": "^1.6.2",
+    "next": "^14.2.35",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.6",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^16.0.10",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
