--- a/papertrade-frontend/package.json
+++ b/papertrade-frontend/package.json
@@ -11,13 +11,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
-    "@tailwindcss/postcss": "^4.1.17",
     "axios": "^1.6.2",
     "clsx": "^2.1.0",
     "date-fns": "^3.0.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.344.0",
-    "next": "15.1.4",
+    "next": "^14.2.35",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
@@ -30,12 +29,13 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8",
-    "eslint-config-next": "15.1.4",
+    "eslint-config-next": "^16.0.10",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
