--- a/papertrade-frontend-admin/package.json
+++ b/papertrade-frontend-admin/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.2",
+    "framer-motion": "^12.23.26",
+    "lucide-react": "^0.562.0",
     "next": "^14.2.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
